logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T200000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:30:10.341+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [queued]>
[2025-07-24T14:30:10.350+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [queued]>
[2025-07-24T14:30:10.351+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:30:10.363+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 20:00:00+00:00
[2025-07-24T14:30:10.369+0000] {standard_task_runner.py:60} INFO - Started process 926 to run task
[2025-07-24T14:30:10.372+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T20:00:00+00:00', '--job-id', '588', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp9h7osr2p']
[2025-07-24T14:30:10.375+0000] {standard_task_runner.py:88} INFO - Job 588: Subtask Load_songplays_fact_table
[2025-07-24T14:30:10.436+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:30:10.507+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T20:00:00+00:00'
[2025-07-24T14:30:10.516+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:30:10.529+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T200000, start_date=20250724T143010, end_date=20250724T143010
[2025-07-24T14:30:10.541+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 588 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 926)
[2025-07-24T14:30:10.586+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:30:10.612+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:27:59.718+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [queued]>
[2025-07-24T17:27:59.735+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [queued]>
[2025-07-24T17:27:59.735+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:27:59.825+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 20:00:00+00:00
[2025-07-24T17:27:59.841+0000] {standard_task_runner.py:60} INFO - Started process 2480 to run task
[2025-07-24T17:27:59.888+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T20:00:00+00:00', '--job-id', '2379', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp5xc_ff6t']
[2025-07-24T17:27:59.893+0000] {standard_task_runner.py:88} INFO - Job 2379: Subtask Load_songplays_fact_table
[2025-07-24T17:28:00.115+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T20:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:28:00.410+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T20:00:00+00:00'
[2025-07-24T17:28:29.600+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:28:29.717+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T200000, start_date=20250724T172759, end_date=20250724T172829
[2025-07-24T17:28:30.546+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:28:30.594+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
